complete sprint 3 tasks
